Upgrade to Java 21 compiler and IntelliJ 2024.2 target
- Update build.gradle.kts: Java 21 source/target, toolchain, IDE 2024.2
- Convert ArtifactInfo and ArtifactInstruction to records
- Replace .get(0) with .getFirst() for sequenced collections
- Update all docs (README, wiki, copilot-instructions) to reflect 2024.2+/JDK 21
- Remove archived move-menu-to-top-level change
- Add java-21-compiler change artifacts

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>